<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="15"
    tools:context=".ActivityAdminEditUser">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_weight="2"
        android:layout_marginBottom="0dp"
        android:background="#4287f5">


        <TextView
            android:id="@+id/tvPageHeader"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:text="@string/edit_user"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="690dp"
        android:layout_weight="1"
        android:layout_marginBottom="0dp"
        android:background="#e6e9ff">


        <EditText
            android:id="@+id/EditTextUserID"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/enter_user_id"
            android:inputType="text"
            android:maxLength="4"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <Button
            android:id="@+id/searchButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/EditTextUserID"
            android:backgroundTint="#80000000"
            android:fontFamily="@font/robotocondensedlight"
            android:text="@string/search_id"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/userSearchStatus"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_below="@id/EditTextUserID"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:text="@string/user_id"
            android:textColor="@color/black"
            android:textSize="15sp" />




        <Spinner
            android:id="@+id/AccountTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextUserID"
            android:layout_marginStart="10dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:entries="@array/account_array"
            android:hint="@string/category"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <EditText
            android:id="@+id/EditTextUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/AccountTypeSpinner"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="200"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextUsername"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/e_mail_address"
            android:inputType="text"
            android:maxLength="200"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c"
            tools:ignore="TextFields" />


        <EditText
            android:id="@+id/EditTextPassword"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_below="@id/newUserButton"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="200"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <Button
            android:id="@+id/updatePasswordButton"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_below="@id/newUserButton"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/EditTextPassword"
            android:backgroundTint="#80000000"
            android:fontFamily="@font/robotocondensedlight"
            android:text="@string/update_password"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/newUserButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextEmail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/EditTextUserID"
            android:backgroundTint="#80000000"
            android:fontFamily="@font/robotocondensedlight"
            android:layout_centerVertical="true"
            android:text="@string/new_user"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveUserButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextEmail"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@id/newUserButton"
            android:backgroundTint="#80000000"
            android:layout_centerVertical="true"
            android:fontFamily="@font/robotocondensedlight"
            android:text="@string/save_user"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />



    </RelativeLayout>

</LinearLayout>








