<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e6e9ff"
    android:weightSum="15"
    tools:context=".ActivityAdminEditQuestion">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_weight="2"
        android:layout_marginBottom="0dp"
        android:background="#4287f5">




        <TextView
            android:id="@+id/tvPageHeader"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:text="@string/edit_question"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="690dp"
        android:layout_weight="1"
        android:layout_marginBottom="0dp"
        android:background="#e6e9ff">


        <EditText
            android:id="@+id/EditTextQuestionID"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/enter_question_id"
            android:inputType="text"
            android:maxLength="4"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <Button
            android:id="@+id/searchButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/EditTextQuestionID"
            android:backgroundTint="#80000000"
            android:fontFamily="@font/robotocondensedlight"
            android:text="@string/search_id"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/questionSearchStatus"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_below="@id/EditTextQuestionID"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:text="@string/question_id"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <Spinner
            android:id="@+id/CategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextQuestionID"
            android:layout_marginStart="10dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:entries="@array/category_array"
            android:hint="@string/category"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <EditText
            android:id="@+id/EditTextQuestion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/CategorySpinner"
            android:layout_marginStart="10dp"

            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/question"
            android:inputType="text"
            android:maxLength="200"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <EditText
            android:id="@+id/EditTextOption1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextQuestion"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/option_1"
            android:inputType="text"
            android:maxLength="200"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <EditText
            android:id="@+id/EditTextOption2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextOption1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/option_2"
            android:inputType="text"
            android:maxLength="200"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <EditText
            android:id="@+id/EditTextOption3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextOption2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/option_3"
            android:inputType="text"
            android:maxLength="200"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <EditText
            android:id="@+id/EditTextOption4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextOption3"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/option_4"
            android:inputType="text"
            android:maxLength="200"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <Spinner
            android:id="@+id/AnswerSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextOption4"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:entries="@array/answer_array"
            android:hint="@string/category"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <EditText
            android:id="@+id/EditTextExplanation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/AnswerSpinner"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/question_explanation"
            android:inputType="text"
            android:maxLength="500"
            android:maxLines="3"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#5c5c5c" />


        <Button
            android:id="@+id/newQuestionButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextExplanation"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/EditTextQuestionID"
            android:backgroundTint="#80000000"
            android:fontFamily="@font/robotocondensedlight"
            android:text="@string/new_question"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveQuestionButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/EditTextExplanation"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@id/newQuestionButton"
            android:backgroundTint="#80000000"
            android:fontFamily="@font/robotocondensedlight"
            android:text="@string/save_question"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />



    </RelativeLayout>

</LinearLayout>








