<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4287f5"
    android:weightSum="15"
    tools:context=".ActivityFullExamResult">


    <RelativeLayout
        android:id="@+id/topHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="2"
        android:background="#4287f5"

        >


        <TextView
            android:id="@+id/tvPageHeader"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:text="@string/test_results"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="682dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="2"
        android:background="#e6e9ff">


        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:text="#/#"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/verdictLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoreLabel"
            android:layout_marginTop="61dp"
            android:gravity="center"
            android:text="@string/pass_fail"
            android:fontFamily="@font/robotocondensedlight"
            android:textSize="50sp" />


        <Button
            android:id="@+id/menubtn"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:layout_below="@+id/verdictLabel"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#4287f5"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:text="@string/main_menu"
            android:textSize="14sp" />

        <Button
            android:id="@+id/retrybtn"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:layout_below="@+id/verdictLabel"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/menubtn"
            android:backgroundTint="#4287f5"
            android:fontFamily="@font/robotocondensedlight"
            android:text="@string/retake_test"
            android:textSize="13sp" />

        <Button
            android:id="@+id/resultsbtn"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:layout_below="@+id/verdictLabel"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/retrybtn"
            android:backgroundTint="#4287f5"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:text="@string/all_results"
            android:textSize="13sp" />
        </RelativeLayout>





</LinearLayout>















