<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e6e9ff"
    android:weightSum="15"
    tools:context=".ActivityAdminAllUsers">



    <RelativeLayout
        android:id="@+id/topHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="2"
        android:background="#4287f5"
        >


        <TextView
            android:id="@+id/tvPageHeader"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:text="@string/all_users"
            android:textColor="@color/white"
            android:textSize="35sp" />




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/robotocondensedlight"
        android:layout_weight="2"
        android:background="#e6e6ff">


        <TextView
            android:id="@+id/allUsersStats"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:scrollbars="vertical"
            android:text="@string/stats"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/progressBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fetching_results"
            android:layout_below="@id/progressBar"
            android:visibility="visible" />



        <ListView
            android:id="@+id/allResultsListView"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:layout_below="@id/allUsersStats"
            android:fontFamily="@font/robotocondensedlight"
            android:paddingBottom="0dp" />





    </RelativeLayout>

</LinearLayout>















