<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="#4287f5"
android:weightSum="15"
tools:context=".ActivityResultsAll">



    <RelativeLayout
        android:id="@+id/topHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="2"
        android:background="#4287f5"
        >


        <TextView
            android:id="@+id/tvPageHeader"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center"
            android:text="@string/all_exam_results"
            android:textColor="@color/white"
            android:textSize="35sp" />




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/robotocondensedlight"
        android:layout_weight="2"
        android:background="#e6e9ff">


        <TextView
            android:id="@+id/tvTestStats"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/robotocondensedlight"
            android:gravity="center_horizontal"
            android:scrollbars="vertical"
            android:text="@string/stats"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/progressBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fetching_results"
            android:layout_below="@id/progressBar"
            android:visibility="visible" />

<com.github.mikephil.charting.charts.BarChart
    android:id="@+id/barChart"
    android:layout_width="match_parent"
    android:layout_below="@id/tvTestStats"
    android:layout_height="550dp"/>


        <ListView
            android:id="@+id/allResultsListView"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_below="@id/tvTestStats"
            android:fontFamily="@font/robotocondensedlight"
            android:paddingBottom="0dp" />


        <Button
            android:id="@+id/viewChange"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@id/tvTestStats"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="580dp"
            android:backgroundTint="#4287f5"
            android:text=""
            android:textSize="15sp" />


    </RelativeLayout>

</LinearLayout>















